Use a pattern instead of a CEL to validate HTTP header values
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -552,12 +552,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -635,12 +631,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -851,12 +843,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -934,12 +922,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -1236,12 +1220,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1318,12 +1298,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1533,12 +1509,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1615,12 +1587,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
