--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -1078,12 +1078,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -1161,12 +1157,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -1533,12 +1525,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -1616,12 +1604,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -2593,12 +2577,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -2675,12 +2655,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -3046,12 +3022,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -3128,12 +3100,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -3473,11 +3441,8 @@ spec:
                                     by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                   maxLength: 4096
                                   minLength: 1
+                                  pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                   type: string
-                                  x-kubernetes-validations:
-                                  - message: must only contain printable ASCII characters,
-                                      optionally separated by single tabs or spaces
-                                    rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                               required:
                               - name
                               - value
@@ -5319,12 +5284,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -5402,12 +5363,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -5774,12 +5731,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -5857,12 +5810,8 @@ spec:
                                               by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
+                                            pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                             type: string
-                                            x-kubernetes-validations:
-                                            - message: must only contain printable
-                                                ASCII characters, optionally separated
-                                                by single tabs or spaces
-                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -6834,12 +6783,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -6916,12 +6861,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -7287,12 +7228,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -7369,12 +7306,8 @@ spec:
                                         by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
+                                      pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                       type: string
-                                      x-kubernetes-validations:
-                                      - message: must only contain printable ASCII
-                                          characters, optionally separated by single
-                                          tabs or spaces
-                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -7714,11 +7647,8 @@ spec:
                                     by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                   maxLength: 4096
                                   minLength: 1
+                                  pattern: ^[!-~]+([\t ]?[!-~]+)*$
                                   type: string
-                                  x-kubernetes-validations:
-                                  - message: must only contain printable ASCII characters,
-                                      optionally separated by single tabs or spaces
-                                    rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                               required:
                               - name
                               - value
