--- a/conformance/tests/httproute-cors.yaml
+++ b/conformance/tests/httproute-cors.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors
+  name: cors-1
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -15,9 +15,6 @@ spec:
         - "https://*.bar.com"
         allowMethods:
         - GET
-        - POST
-        - PUT
-        - PATCH
         - OPTIONS
         allowHeaders:
         - "x-header-1"
@@ -27,6 +24,33 @@ spec:
         - "x-header-4"
         allowCredentials: true
         maxAge: 3600
+    matches:
+    - path:
+        type: PathPrefix
+        value: /cors-1
+    backendRefs:
+    - name: infra-backend-v1
+      port: 8080
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: cors-2
+  namespace: gateway-conformance-infra
+spec:
+  parentRefs:
+  - name: same-namespace
+  rules:
+  - filters:
+    - type: CORS
+      cors:
+        allowOrigins:
+        - "https://www.foo.com"
+        allowMethods: ["*"]
+    matches:
+    - path:
+        type: PathPrefix
+        value: /cors-2
     backendRefs:
     - name: infra-backend-v1
       port: 8080
