--- a/conformance/tests/httproute-cors.yaml
+++ b/conformance/tests/httproute-cors.yaml
@@ -35,7 +35,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors-2
+  name: cors-2   # test CORS with allowMethods: ["*"] and without allowCredentials=true
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
