--- a/conformance/tests/mesh/httproute-named-rule.yaml
+++ b/conformance/tests/mesh/httproute-named-rule.yaml
@@ -1,8 +1,8 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: http-named-rules
-  namespace: gateway-conformance-infra
+  name: mesh-http-named-rules
+  namespace: gateway-conformance-mesh
 spec:
   parentRefs:
   - group: ""
