--- a/conformance/reports/v1.3.0/buoyant-enterprise-for-linkerd/standard-2.18-default-report.yaml
+++ b/conformance/reports/v1.3.0/buoyant-enterprise-for-linkerd/standard-2.18-default-report.yaml
@@ -1,5 +1,5 @@
 apiVersion: gateway.networking.k8s.io/v1
-date: "2025-06-05T16:17:10-04:00"
+date: "2025-06-06T15:31:47-04:00"
 gatewayAPIChannel: standard
 gatewayAPIVersion: v1.3.0
 implementation:
@@ -16,15 +16,20 @@ profiles:
     result: success
     statistics:
       Failed: 0
+      Passed: 1
+      Skipped: 0
+  name: MESH-GRPC
+  summary: Core tests succeeded.
+- core:
+    result: success
+    statistics:
+      Failed: 0
       Passed: 7
       Skipped: 0
   extended:
-    failedTests:
-    - MeshHTTPRouteRedirectPath
-    - MeshHTTPRouteRewritePath
-    result: failure
+    result: success
     statistics:
-      Failed: 2
+      Failed: 0
       Passed: 5
       Skipped: 0
     supportedFeatures:
@@ -49,15 +54,8 @@ profiles:
     - MeshClusterIPMatching
     - MeshConsumerRoute
     - MeshHTTPRouteBackendRequestHeaderModification
+    unsupportedFeatures:
     - MeshHTTPRouteRedirectPath
     - MeshHTTPRouteRewritePath
   name: MESH-HTTP
-  summary: Core tests succeeded. Extended tests failed with 2 test failures.
-- core:
-    result: success
-    statistics:
-      Failed: 0
-      Passed: 1
-      Skipped: 0
-  name: MESH-GRPC
-  summary: Core tests succeeded.
+  summary: Core tests succeeded. Extended tests succeeded.
