--- a/conformance/reports/v1.3.0/buoyant-enterprise-for-linkerd/standard-2.18-default-report.yaml
+++ b/conformance/reports/v1.3.0/buoyant-enterprise-for-linkerd/standard-2.18-default-report.yaml
@@ -1,5 +1,5 @@
 apiVersion: gateway.networking.k8s.io/v1
-date: "2025-06-06T15:31:47-04:00"
+date: "2025-06-11T14:31:02-04:00"
 gatewayAPIChannel: standard
 gatewayAPIVersion: v1.3.0
 implementation:
@@ -30,7 +30,7 @@ profiles:
     result: success
     statistics:
       Failed: 0
-      Passed: 5
+      Passed: 8
       Skipped: 0
     supportedFeatures:
     - HTTPRouteBackendProtocolH2C
@@ -54,6 +54,9 @@ profiles:
     - MeshClusterIPMatching
     - MeshConsumerRoute
     - MeshHTTPRouteBackendRequestHeaderModification
+    - MeshHTTPRouteQueryParamMatching
+    - MeshHTTPRouteRedirectPort
+    - MeshHTTPRouteSchemeRedirect
     unsupportedFeatures:
     - MeshHTTPRouteRedirectPath
     - MeshHTTPRouteRewritePath
