--- a/conformance/tests/httproute-rewrite-host-backend-weights.yaml
+++ b/conformance/tests/httproute-rewrite-host-backend-weights.yaml
@@ -1,11 +1,13 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: rewrite-path-backend-weights
+  name: rewrite-host-weights-backend
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
   - name: same-namespace
+  hostnames:
+    - "rewrite.example"
   rules:
   - matches:
     - path:
@@ -18,18 +20,14 @@ spec:
       filters:
       - type: URLRewrite
         urlRewrite:
-          path:
-            type: ReplacePrefixMatch
-            replacePrefixMatch: /infra-backed-v1
+          hostname: infra-backend-v1.one
     - name: infra-backend-v2
       port: 8080
       weight: 50
       filters:
       - type: URLRewrite
         urlRewrite:
-          path:
-            type: ReplacePrefixMatch
-            replacePrefixMatch: /infra-backed-v2
+          hostname: infra-backend-v2.one
   - backendRefs:
     - name: infra-backend-v1
       port: 8080
@@ -37,15 +35,11 @@ spec:
       filters:
       - type: URLRewrite
         urlRewrite:
-          path:
-            type: ReplaceFullPath
-            replaceFullPath: /infra-backed-v1
+          hostname: infra-backend-v1.two
     - name: infra-backend-v2
       port: 8080
       weight: 50
       filters:
       - type: URLRewrite
         urlRewrite:
-          path:
-            type: ReplaceFullPath
-            replaceFullPath:  /infra-backed-v2
+          hostname: infra-backend-v2.two
