--- a/geps/gep-3793/metadata.yaml
+++ b/geps/gep-3793/metadata.yaml
@@ -1,7 +1,7 @@
 apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 3793
-name: GEP template
+name: Default Gateways
 status: Provisional
 # Any authors who contribute to the GEP in any way should be listed here using
 # their GitHub handle.
