--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,8 @@ nav:
       - geps/gep-1494/index.md
       - geps/gep-1651/index.md
       - geps/gep-2648/index.md
+      - geps/gep-3792/index.md
+      - geps/gep-3793/index.md
     - Implementable:
       - geps/gep-91/index.md
       - geps/gep-3567/index.md
