Introduce GEP 3875: BackendTLS consumer overrides and context awareness

--- a/geps/gep-1897/metadata.yaml
+++ b/geps/gep-1897/metadata.yaml
@@ -13,3 +13,7 @@ relationships:
     - number: 1282
       name: Describing Backend Properties
       description: Implements just part of the Backend Properties GEP.
+  extendedBy:
+  - number: 3875
+    name: "BackendTLS consumer overrides and context awareness"
+    description: Adds additional fields
