TLSRoute: Move to v1alpha3
TLSRoute: Update config crd

TLSRoute: Update pkg

TLSRoute: Update hack example

--- a/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
@@ -22,7 +22,7 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
-    name: v1alpha2
+    name: v1alpha3
     schema:
       openAPIV3Schema:
         description: |-
@@ -55,11 +55,11 @@ spec:
             properties:
               hostnames:
                 description: |-
-                  Hostnames defines a set of SNI names that should match against the
+                  Hostnames defines a set of SNI hostnames that should match against the
                   SNI attribute of TLS ClientHello message in TLS handshake. This matches
                   the RFC 1123 definition of a hostname with 2 notable exceptions:
 
-                  1. IPs are not allowed in SNI names per RFC 6066.
+                  1. IPs are not allowed in SNI hostnames per RFC 6066.
                   2. A hostname may be prefixed with a wildcard label (`*.`). The wildcard
                      label must appear by itself as the first label.
 
@@ -109,6 +109,7 @@ spec:
                   pattern: ^(\*\.)?[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                   type: string
                 maxItems: 16
+                minItems: 1
                 type: array
               parentRefs:
                 description: |-
