gep: update the possible statuses in GEP-696
Signed-off-by: Mattia Lavacca <lavacca.mattia@gmail.com>

--- a/geps/gep-696/metadata.yaml
+++ b/geps/gep-696/metadata.yaml
@@ -10,6 +10,7 @@ authors:
   - robscott
   - youngnick
   - dprotaso
+  - mlavacca
 relationships:
   # obsoletes indicates that a GEP makes the linked GEP obsolete, and completely
   # replaces that GEP. The obsoleted GEP MUST have its obsoletedBy field
