Enable jsontags linter

--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -12,6 +12,7 @@ linters:
           linters:
             enable:
             - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
+            - "jsontags" # Ensure every field has a json tag.
             disable:
             - "*"
           lintersConfig: {}
