--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -14,6 +14,7 @@ linters:
             - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
             - "jsontags" # Ensure every field has a json tag.
             - "nofloats" # Ensure floats are not used.
+            - "nomaps" # Ensure maps are not used.
             disable:
             - "*"
           lintersConfig: {}
