--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -17,6 +17,7 @@ linters:
             - "nomaps" # Ensure maps are not used.
             - "nophase" # Phase fields are discouraged by the Kube API conventions, use conditions instead.
             - "requiredfields" # Required fields should not be pointers, and should not have `omitempty`.
+            - "statussubresource" # All root objects that have a `status` field should have a status subresource.
             disable:
             - "*"
           lintersConfig: {}
