--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -18,6 +18,7 @@ linters:
             - "nophase" # Phase fields are discouraged by the Kube API conventions, use conditions instead.
             - "requiredfields" # Required fields should not be pointers, and should not have `omitempty`.
             - "statussubresource" # All root objects that have a `status` field should have a status subresource.
+            - "uniquemarkers" # Ensure that types and fields do not contain more than a single definition of a marker that should only be present once.
             disable:
             - "*"
           lintersConfig: {}
