--- a/.custom-gcl.yml
+++ b/.custom-gcl.yml
@@ -1,6 +1,6 @@
-version:  v2.2.1
+version: v2.2.1
 name: golangci-kube-api-linter
 destination: ./bin
 plugins:
 - module: 'sigs.k8s.io/kube-api-linter'
-  version: 'b566fe88b73232c10a37b0274ec59efd91002072' # Pin to a commit while there's no tag
+  version: 'v0.0.0-20250715075424-4fab82d26a8e' # Pin to a commit while there's no tag
