--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -11,24 +11,24 @@ linters:
         settings:
           linters:
             enable:
-            - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
-            - "jsontags" # Ensure every field has a json tag.
-            - "nofloats" # Ensure floats are not used.
-            - "nomaps" # Ensure maps are not used.
-            - "nophase" # Phase fields are discouraged by the Kube API conventions, use conditions instead.
-            - "requiredfields" # Required fields should not be pointers, and should not have `omitempty`.
-            - "statussubresource" # All root objects that have a `status` field should have a status subresource.
-            - "uniquemarkers" # Ensure that types and fields do not contain more than a single definition of a marker that should only be present once.
+              - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
+              - "jsontags" # Ensure every field has a json tag.
+              - "nofloats" # Ensure floats are not used.
+              - "nomaps" # Ensure maps are not used.
+              - "nophase" # Phase fields are discouraged by the Kube API conventions, use conditions instead.
+              - "requiredfields" # Required fields should not be pointers. Having `omitempty` is optional
+              - "statussubresource" # All root objects that have a `status` field should have a status subresource.
+              - "uniquemarkers" # Ensure that types and fields do not contain more than a single definition of a marker that should only be present once.
             disable:
-            - "*"
+              - "*"
           lintersConfig: {}
   exclusions:
     generated: strict
     paths:
-    - conformance/
+      - conformance/
     paths-except:
-    - apis/
-    - apisx/
+      - apis/
+      - apisx/
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
