--- a/geps/gep-3792/metadata.yaml
+++ b/geps/gep-3792/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 3792
 name: Out-of-Cluster Gateways
-status: Provisional
+status: Deferred
 # Any authors who contribute to the GEP in any way should be listed here using
 # their GitHub handle.
 authors:
