Add missing required markers on gateway types

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -973,6 +973,8 @@ spec:
                               maxItems: 8
                               minItems: 1
                               type: array
+                          required:
+                          - caCertificateRefs
                           type: object
                         mode:
                           default: Terminate
@@ -1296,6 +1298,7 @@ spec:
                         - type
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                       x-kubernetes-list-map-keys:
                       - type
@@ -1338,6 +1341,7 @@ spec:
                         - kind
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                   required:
                   - attachedRoutes
@@ -2311,6 +2315,8 @@ spec:
                               maxItems: 8
                               minItems: 1
                               type: array
+                          required:
+                          - caCertificateRefs
                           type: object
                         mode:
                           default: Terminate
@@ -2634,6 +2640,7 @@ spec:
                         - type
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                       x-kubernetes-list-map-keys:
                       - type
@@ -2676,6 +2683,7 @@ spec:
                         - kind
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                   required:
                   - attachedRoutes
