--- a/config/crd/experimental/gateway.networking.x-k8s.io_xlistenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_xlistenersets.yaml
@@ -487,6 +487,8 @@ spec:
                               maxItems: 8
                               minItems: 1
                               type: array
+                          required:
+                          - caCertificateRefs
                           type: object
                         mode:
                           default: Terminate
