--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -1064,6 +1064,7 @@ spec:
                         - type
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                       x-kubernetes-list-map-keys:
                       - type
@@ -1106,6 +1107,7 @@ spec:
                         - kind
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                   required:
                   - attachedRoutes
@@ -2170,6 +2172,7 @@ spec:
                         - type
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                       x-kubernetes-list-map-keys:
                       - type
@@ -2212,6 +2215,7 @@ spec:
                         - kind
                         type: object
                       maxItems: 8
+                      minItems: 1
                       type: array
                   required:
                   - attachedRoutes
